re #84 - fix overflow bug

--- a/resources/assets/scss/uploader.scss
+++ b/resources/assets/scss/uploader.scss
@@ -348,7 +348,7 @@ $k-upload-list-button-desktop-size: 23px !default;
   height: 21px;
   overflow: hidden;
 
-  .js-file-name-container {
+  div {
     height: 21px;
     display: inline-block;
     overflow: hidden;
